Logging now uses SLF4J implementations of commons-logging and Log4J. SLF4J will handle routing these log messages to JDK logging. Removed existing config/code related to routing of log messages. Updated the Manager Applet build to add missing JARs to the Pack200 list, the build has been modified to fail if JARs are listed and not found.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29078 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -1455,6 +1455,11 @@
         <attribute name="jarfile"/>
         <attribute name="packfile" default="@{jarfile}.pack.gz"/>
         <sequential>
+            <condition property="pack-mac.fail">
+                <not>
+                    <available file="@{jarfile}"/>
+                </not>
+            </condition>
             <pack200 src="@{jarfile}" destfile="@{packfile}" segmentlimit="-1" gzipoutput="true"/>
         </sequential>
     </macrodef>
@@ -1463,76 +1468,86 @@
         <pack-mac jarfile="${build.dir}/managerapplet/layer7-gateway-console-applet.jar"/>
 
         <!--
-          Note that the build does not fail if any of these are missing, but a
-          warning is logged.
+          The build will fail if any of these JARS are missing.
         -->
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/annotations-10.5.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/antlr-2.7.7-l7p1.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/aopalliance-1.0.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/apache-harmony-asn1-0.1.jar"/>
-        <!--
-          This JAR is signed, so ignoring for now, but should be tested later when we have time
-        -->
-        <!--<pack-mac jarfile="${build.dir}/managerapplet/lib/bcprov-jdk15-141.jar"/>-->
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/bcprov-unsigned-jdk16-1.46.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/browser-launcher-1.0rc4.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/certj-3.1.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/commons-codec-1.4.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/commons-collections-3.2.1.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/commons-httpclient-3.1.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/commons-lang-2.5.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/commons-logging-1.1.1.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/commons-lang-2.6.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/concurrent-1.3.4.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/dom4j-1.6.1.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/forms_rt-9.0.1.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/hibernate-core-3.5.3-Final.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/forms_rt-10.0.2.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/hibernate-core-3.6.1.Final.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/jackson-core-asl-1.7.1.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/jackson-mapper-asl-1.7.1.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/jaxb-api-2.1.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/jaxb-impl-2.1.13.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/jaxen-1.1.3.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/jaxws-api-2.1.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/jaxws-rt-2.1.7.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/jcalendar-1.3.2.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/jcommon-1.0.15.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/jcalendar-1.3.3.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/jcl-over-slf4j-1.6.1.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/jcommon-1.0.16.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/jdom-1.1.1.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/jfreechart-1.0.12.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/jfreechart-1.0.13.jar"/>
+        <!--
+          Skip signed JAR
+        -->
+        <!-- <pack-mac jarfile="${build.dir}/managerapplet/lib/jsafe-jce-fips-4.1.jar"/> -->
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/json-schema-validator-0.0.1-SNAPSHOT.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/kunststoff-2.0.2.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/layer7-uddi-lib-1.1.0.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/log4j-1.2.16.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/log4j-over-slf4j-1.6.1.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/looks-1.1.3.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/mail-1.4.3.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/mimepull-1.4.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/mail-1.4.4.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/nekohtml-1.9.14.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/persistence-api-2.0.0.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/policy-1.0.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/saaj-api-1.3.1.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/saaj-impl-1.3.4.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/saaj-impl-1.3.3.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/servlet-api-2.5.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-aop-3.0.2.RELEASE.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-asm-3.0.2.RELEASE.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-beans-3.0.2.RELEASE.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-context-3.0.2.RELEASE.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-core-3.0.2.RELEASE.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-expression-3.0.2.RELEASE.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-jdbc-3.0.2.RELEASE.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-orm-3.0.2.RELEASE.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-tx-3.0.2.RELEASE.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-web-3.0.2.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/sftp-8.7.0.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/slf4j-api-1.6.1.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/slf4j-jdk14-1.6.1.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-aop-3.0.5.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-asm-3.0.5.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-beans-3.0.5.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-context-3.0.5.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-core-3.0.5.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-expression-3.0.5.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-jdbc-3.0.5.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-orm-3.0.5.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-tx-3.0.5.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-web-3.0.5.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/sslj-5.1.1.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/stax-ex-1.2.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/streambuffer-0.8.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/validation-api-1.0.0.GA.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/whirlycache-1.0.1.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/wsdl4j-1.6.2-l7p1.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/wsdl4j-1.6.2-l7p3.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/xalan-2.7.1.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/xalan-serializer-2.7.1.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/xbean-saml-1.1-1.0.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/xbean-saml-2.0-1.0.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/xbean-xenc-xmldsig-1.0.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/xercesImpl-2.10.0.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/xercesImpl-2.11.0.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/xml-apis-1.4.01.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/xmlbeans-2.5.0.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/xmlpad-3.7.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/xmlpad-res-3.7.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/xmlsec-1.4.3.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/xom-1.2.5.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/xmlsec-1.4.4.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/xom-1.2.6.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/xss4j.00.patch-1.0.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/xss4j-1.0.jar"/>
+
+        <fail if="pack-mac.fail">Missing files for pac-mac, see "Nothing to do" messages above.</fail>
     </target>
 
     <!--
