--- a/modules/gateway/sca-config/ivy.xml
+++ b/modules/gateway/sca-config/ivy.xml
@@ -27,6 +27,14 @@
         <dependency name="layer7-gateway-config" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-gateway-sca-common" rev="latest.integration" force="true" conf="core"/>
 
+        <dependency org="org.slf4j" name="slf4j-api" rev="1.6.1" force="true" conf="core"/>
+        <dependency org="org.slf4j" name="slf4j-jdk14" rev="1.6.1" force="true" conf="core"/>
+        <dependency org="org.slf4j" name="jcl-over-slf4j" rev="1.6.1" force="true" conf="core"/>
+        <dependency org="org.slf4j" name="log4j-over-slf4j" rev="1.6.1" force="true" conf="core"/>
+
+        <exclude org="commons-logging" module="commons-logging" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
+        <exclude org="log4j" module="log4j" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
+
         <override org="antlr" module="antlr" matcher="exact" rev="2.7.7-l7p1"/>
     </dependencies>
 </ivy-module>
