--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/hibernate_default.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/hibernate_default.properties
@@ -26,7 +26,7 @@ l7.mysql.url.parameter.secondsBeforeRetryMaster = 20
 l7.mysql.url.parameter.queriesBeforeRetryMaster = 2000
 l7.mysql.url.parameter.socketTimeout = 120000
 l7.mysql.url.parameter.connectTimeout = 2000
-l7.mysql.url.parameter.logger = com.mysql.jdbc.log.Jdk14Logger
+l7.mysql.url.parameter.logger = com.mysql.jdbc.log.Slf4JLogger
 l7.mysql.url.parameters.extra =
 l7.mysql.url.parameters = \
   autoReconnect=${l7.mysql.url.parameter.autoReconnect}\
