--- a/modules/emsconfig/ivy.xml
+++ b/modules/emsconfig/ivy.xml
@@ -36,7 +36,14 @@
             <exclude org="xerces" module="xerces" name="*" type="*" ext="*" conf=""
                      matcher="exact"/>
         </dependency>
+        <dependency org="org.slf4j" name="slf4j-api" rev="1.6.1" force="true" conf="core"/>
+        <dependency org="org.slf4j" name="slf4j-jdk14" rev="1.6.1" force="true" conf="core"/>
+        <dependency org="org.slf4j" name="jcl-over-slf4j" rev="1.6.1" force="true" conf="core"/>
+        <dependency org="org.slf4j" name="log4j-over-slf4j" rev="1.6.1" force="true" conf="core"/>
         <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
+
+        <exclude org="commons-logging" module="commons-logging" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
+        <exclude org="log4j" module="log4j" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
 
         <override org="xalan" module="xalan" matcher="exact" rev="2.7.1"/>
     </dependencies>
