--- a/modules/gateway/console-applet/ivy.xml
+++ b/modules/gateway/console-applet/ivy.xml
@@ -35,6 +35,8 @@
         <dependency name="layer7-json" rev="latest.integration" force="true" conf="core"/>
         <dependency org="bouncycastle" name="bcprov-unsigned-jdk16" rev="1.46" force="true" conf="runtime"/> <!-- use unsigned BC jar to be same as applet -->
         <exclude org="bouncycastle" module="bcprov-jdk16" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />  <!-- exclude signed BC jar -->
+        <exclude org="commons-logging" module="commons-logging" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
+        <exclude org="log4j" module="log4j" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="com.l7tech"/>
     </dependencies>
 </ivy-module>
