--- a/modules/gateway/processcontroller/ivy.xml
+++ b/modules/gateway/processcontroller/ivy.xml
@@ -38,6 +38,8 @@
 
         <dependency org="org.slf4j" name="slf4j-api" rev="1.6.1" force="true" conf="core"/>
         <dependency org="org.slf4j" name="slf4j-jdk14" rev="1.6.1" force="true" conf="core"/>
+        <dependency org="org.slf4j" name="jcl-over-slf4j" rev="1.6.1" force="true" conf="core"/>
+        <dependency org="org.slf4j" name="log4j-over-slf4j" rev="1.6.1" force="true" conf="core"/>
         <dependency org="org.snmp4j" name="snmp4j" rev="1.11.2" force="true" conf="core"/>
         <dependency org="org.springframework" name="spring-web" rev="3.0.5.RELEASE" force="true" conf="core"/>
 
@@ -54,6 +56,8 @@
 
         <!-- This needs the signed version of bouncy castle because it registers it as a provider. -->
         <exclude org="bouncycastle" module="bcprov-unsigned-jdk16" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
+        <exclude org="commons-logging" module="commons-logging" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
+        <exclude org="log4j" module="log4j" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
 
         <override org="org.mortbay.jetty" module="jetty" matcher="exact" rev="6.1.26"/>
 
