--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -69,12 +69,13 @@
         <dependency org="org.javassist" name="javassist" rev="3.14.0-GA" force="true" conf="core"/>
         <dependency org="jboss" name="jboss-j2ee" rev="4.0.3" force="true" conf="core"/>
         <dependency org="org.jboss.cache" name="jbosscache-core" rev="3.2.5.GA" force="true" conf="core"/>
-        <dependency org="log4j" name="log4j" rev="1.2.16" force="true" conf="core"/>
         <dependency org="org.apache.mina" name="mina-core" rev="1.1.7" force="true" conf="core"/>
         <dependency org="org.apache.mina" name="mina-filter-ssl" rev="1.1.7" force="true" conf="core"/>
         <dependency org="mysql" name="mysql-connector-java" rev="5.1.15" force="true" conf="core"/>
         <dependency org="org.slf4j" name="slf4j-api" rev="1.6.1" force="true" conf="core"/>
         <dependency org="org.slf4j" name="slf4j-jdk14" rev="1.6.1" force="true" conf="core"/>
+        <dependency org="org.slf4j" name="jcl-over-slf4j" rev="1.6.1" force="true" conf="core"/>
+        <dependency org="org.slf4j" name="log4j-over-slf4j" rev="1.6.1" force="true" conf="core"/>
         <dependency org="org.springframework" name="spring-jdbc" rev="3.0.5.RELEASE" force="true" conf="core"/>
         <dependency org="org.springframework" name="spring-orm" rev="3.0.5.RELEASE" force="true" conf="core"/>
         <dependency org="org.springframework" name="spring-context-support" rev="3.0.5.RELEASE" force="true" conf="core"/>
@@ -111,6 +112,8 @@
         <!-- Exclusions --> 
         <exclude org="asm" module="asm-attrs" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="com.sun.xml.fastinfoset" module="FastInfoset" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
+        <exclude org="commons-logging" module="commons-logging" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
+        <exclude org="log4j" module="log4j" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="org.apache.cxf" module="cxf-rt-transports-http-jetty" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="xerces" module="xmlParserAPIs" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
 
