SSG-4997: include bcprov at compile time and the package for patchVerifier
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29089 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/patchverifier/build.xml
+++ b/modules/gateway/patchverifier/build.xml
@@ -28,6 +28,7 @@
         <jar-include name="commons-lang" organisation="commons-lang" dir="${class-dependencies}"/>
         <jar-include name="commons-codec" organisation="commons-codec" dir="${class-dependencies}"/>
         <jar-include name="commons-configuration" organisation="commons-configuration" dir="${class-dependencies}"/>
+        <jar-include name="bcprov-jdk16" organisation="bouncycastle" dir="${class-dependencies}" conf="default"/>
 
         <classfileset id="verifier-dependencies" dir="${class-dependencies}">
             <root classname="com.l7tech.server.processcontroller.patching.PatchVerifier"/>
