--- a/modules/policy/ivy.xml
+++ b/modules/policy/ivy.xml
@@ -40,6 +40,8 @@
         <dependency org="org.springframework" name="spring-beans" rev="3.0.5.RELEASE" force="true" conf="core"/>
         <dependency org="org.springframework" name="spring-context" rev="3.0.5.RELEASE" force="true" conf="core"/>
         <dependency org="org.springframework" name="spring-core" rev="3.0.5.RELEASE" force="true" conf="core"/>
+        <!-- Saxon Home Edition (Mozilla Public License) for evaluation of transformation speed -->
+        <dependency org="net.sf.saxon" name="saxon9he" rev="9.3.0.5" force="true" conf="core"/>
         <!-- Tarari is optional -->
         <dependency org="com.tarari" name="tarari-raxj" rev="4.4.3.31" force="true" conf="optional,test"/>
         <dependency org="org.apache.xmlbeans" name="xmlbeans" rev="2.5.0" force="true" conf="core"/>
