Some modifications too reflect the implementation of various features in radius_ldap_setup.sh script.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29131 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -10,6 +10,9 @@
 # The above mentioned script must be called with this file full patha and name as the only argument:
 # Example: .../radius_ldap_setup.sh /opt/SecureSpan/Appliance/config/radius_ldap_setup.conf
 
+# The values of all of the variables below is case sensitive; must obey the case used in the description.
+
+
 # CFG_TYPE variable can have only one of these values:
 # - file (disables all the other authentication methods and provide only the local/file authentication)
 # - ldap_only
@@ -22,7 +25,7 @@ CFG_TYPE="file"
 # It is relevant only if the CFG_TYPE variable is "radius_only or "radius_and_ldap".
 # It's value should only be a host IP address, e.g. "10.7.48.130" (a CIDR notation may not work).
 # Default: <empty>
-RADIUS_SRV_IP="10.7.48.130"
+RADIUS_SRV_HOST="10.7.48.130"
 
 # RADIUS_SECRET variable should be the string used as shared secret by the Radius server, e.g. "poiu0987"
 # It is relevant only if the CFG_TYPE variable is "radius_only or "radius_and_ldap".
@@ -34,6 +37,12 @@ RADIUS_SECRET="poiu0987"
 # It is relevant only if the CFG_TYPE variable is "radius_only or "radius_and_ldap".
 # Default: 3
 RADIUS_TIMEOUT="3"
+
+# PASS_HASH_ALGO variable can have several values but we will only accept "md5" or "sha512".
+# This is used to set the default hash algorithm for local user's passwords as well as on LDAP server.
+# It is relevant only if the CFG_TYPE variable is "ldap_only or "radius_and_ldap".
+# Default: md5
+PASS_HASH_ALGO="md5"
 
 # LDAP_TYPE variable is either "ldap" or "ldaps" to identify if natively supported TLS will be used
 # to communicate with the LDAP server or not. If "ldaps" is used, relevant variables below become mandatory.
@@ -53,12 +62,11 @@ LDAP_SRV="ldapsrv.example.com"
 # Default: <empty>
 LDAP_BASE="dc=example,dc=com"
 
-# LDAP_PORT variable should contain one numeric value representing the port to be used
+# LDAP_PORT variable must contain one numeric value representing the port to be used
 # to contact the LDAP server.
 # It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
-# If it is empty it will defaults to 389 for LDAP_TYPE="ldap" and to 636 for LDAP_TYPE="ldaps".
 # Default: 389
-LDAP_PORT="636"
+LDAP_PORT="389"
 
 # LDAP_CACERT_URL variable is use to retrive a CA certificate to be used in TLS.
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
@@ -72,15 +80,16 @@ LDAP_PORT="636"
 # Default: <empty>
 LDAP_CACERT_URL="https://bigldap/bigldap.l7tech.com.pem"
 
-# LDAP_CACERT_FILE variable is used to make a certificate available for LDAP TLS configuration.
+# LDAP_CACERT_FILE variable specifies the file that contains certificates for all of the Certificate
+# Authorities the client will recognize.
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps"
 # AND LDAP_CACERT_URL is empty.
-# The full path AND filename must be used and the file nominated here must be a x509 certificate.
+# The full path AND filename must be used; the file nominated here must be/contain x509 certificate(s).
 # Default: <empty>
 LDAP_CACERT_FILE="/home/ssgconfig/certificate.pem"
 
 # CLT_TLS_AUTH variable is used to enable client authentication to server in TLS handshake.
-# Enabliung this means TLS will be established with mutual authentication.
+# Enabling this means TLS will be established with mutual authentication.
 # It can be "yes or "no".
 # Default: no
 CLT_TLS_AUTH="no"
@@ -107,6 +116,11 @@ ADVANCED_TLS_CONF="no"
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
 # Default: HIGH:MEDIUM:+SSLv2
 LDAP_TLS_CIPHER_SUITE="HIGH:MEDIUM:+SSLv2"
+
+# Determine if the client should verify the server's certificate
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
+# Default: yes
+LDAP_TLS_CHECKPEER="yes"
 
 # What checks to perform on server certificates in a TLS session, if any.
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
