SCP SFTP: SSH Route assertion, pass through user name and password credentials in request
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29137 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/HostKeyDialog.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/HostKeyDialog.properties
@@ -1,3 +1,5 @@
-sshHostKeyLabel=SSH Host Key
+sshServerHostKeyLabel=SSH Server Host Key
+privateKeyLabel=Private Key
+sshPublicKeyLabel=SSH Public Key
 loadFromFileLabel=Load From File
 sshHostKeyFormatError=There was an issue with the SSH key input. {0}
