--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
@@ -30,7 +30,7 @@ sftpLabel=SFTP
 copyMethodLabel=Copy Method:
 uploadToLable=Upload To
 downloadFromLable=Download From
-passThroughCredentialsLabel=Pass through credentials in request
+passThroughCredentialsLabel=Pass through user name and password credentials in request
 specifyCredentialsLabel=Specify user credentials
 connectionSettingsLabel=Connection settings
 copySettingsLabel=Copy settings
