SSG-4947: an icap assertion
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29153 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
+++ b/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
@@ -1,18 +1,20 @@
 # entries for the main server dialog
-main.button.add=&Add
-main.button.edit=&Edit
-main.button.remove=&Remove
+main.button.addServer=&Add Server
+main.button.editServer=&Edit Server
+main.button.removeServer=&Remove Server
 main.label.strategy=Failover Strategy
 main.checkbox.failAssertion=Continue processing if virus found
 
 #entries for the server properties dialog
 server.button.ok=&OK
 server.button.cancel=&Cancel
-server.button.add=&Add
-server.button.remove=&Remove
-server.label.connectionName=Conneciton Name
 server.label.hostname=Hostname
 server.label.serviceName=Service Name
 server.label.port=Port Number
 server.label.parameters=Service Parameters
+main.button.addParam=Add &Parameter
+main.button.editParam=Edit Parameter
+main.button.removeParam=Remove Parameter
+param.label.name=Parameter Name
+param.label.value=Parameter Value
 server.label.timeout=Timeout (sec.)
