--- a/modules/gateway/assertions/IcapAntivirusScannerAssertion/ivy.xml
+++ b/modules/gateway/assertions/IcapAntivirusScannerAssertion/ivy.xml
@@ -19,6 +19,8 @@
 		<artifact name="IcapAntivirusScannerAssertion" type="aar" ext="aar" conf="master"/>
 	</publications>
 	<dependencies>
+		<dependency org="org.jboss.netty" name="netty" rev="3.2.5.Final" force="true" conf="core"/>
+        <dependency org="ch.mimo" name="netty-icap" rev="1.0.0-RC2" force="true" conf="core"/>	
         <dependency name="layer7-modular-assertions" rev="latest.integration" force="true"
                     conf="compile->compile;runtime->runtime;test->test"/>
                 
