SCP SFTP: SSH Route assertion, validate host fingerprint instead of unencrypted host public key.  Host validation with Jscape library uses fingerprint, while Ganymed's library uses unencrypted public key.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29155 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/HostKeyDialog.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/HostKeyDialog.properties
@@ -1,5 +1,5 @@
 sshServerHostKeyLabel=SSH Server Host Key
 privateKeyLabel=Private Key
-sshPublicKeyLabel=SSH Public Key
+sshPublicKeyFingerprintLabel=SSH Public Key Fingerprint
 loadFromFileLabel=Load From File
 sshHostKeyFormatError=There was an issue with the SSH key input. {0}
