Changing a few parameters and adding others in order give access to more functionality.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29164 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -17,20 +17,20 @@
 # - file (disables all the other authentication methods and provide only the local/file authentication)
 # - ldap_only
 # - radius_only
-# - radius_and_ldap
+# - radius_with_ldap
 # Default: file
-CFG_TYPE="file"
+CFG_TYPE="radius_with_ldap"
 
 # RADIUS_SRV_IP variable should contain the IP address of the Radius server to be used.
 # It is relevant only if the CFG_TYPE variable is "radius_only or "radius_and_ldap".
 # It's value should only be a host IP address, e.g. "10.7.48.130" (a CIDR notation may not work).
 # Default: <empty>
-RADIUS_SRV_HOST="10.7.48.130"
+RADIUS_SRV_HOST="10.7.48.50"
 
 # RADIUS_SECRET variable should be the string used as shared secret by the Radius server, e.g. "poiu0987"
 # It is relevant only if the CFG_TYPE variable is "radius_only or "radius_and_ldap".
 # Default: <empty>
-RADIUS_SECRET="poiu0987"
+RADIUS_SECRET="secret1234"
 
 # RADIUS_TIMEOUT should contain only one numeric value representing the time interval in seconds
 # that the client should wait for the Radius server to reply, e.g. "3" for 3 seconds
@@ -55,18 +55,18 @@ LDAP_TYPE="ldaps"
 # If LDAP_TYPE is "ldap" a host IP address can be used, e.g. "10.7.48.130" (a CIDR notation may not work).
 # If LDAP_TYPE is "ldaps" a hostname must be used and it should match the CN in the certificate used for TLS.
 # Default: <empty>
-LDAP_SRV="ldapsrv.example.com"
+LDAP_SRV="10.7.48.50"
 
 # LDAP_BASE variable should contain the DN of the search base, e.g. "dc=example,dc=com".
 # It is relevant only if the CFG_TYPE variable is "ldap_only or "radius_and_ldap".
 # Default: <empty>
-LDAP_BASE="dc=example,dc=com"
+LDAP_BASE="dc=l7tech,dc=com"
 
 # LDAP_PORT variable must contain one numeric value representing the port to be used
 # to contact the LDAP server.
 # It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
 # Default: 389
-LDAP_PORT="389"
+LDAP_PORT="636"
 
 # LDAP_CACERT_URL variable is use to retrive a CA certificate to be used in TLS.
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
@@ -78,7 +78,7 @@ LDAP_PORT="389"
 #   - http authentication is not supported
 # If scp method is used, the LDAP_CACERT_URL variable MUST be empty and LDAP_CACERT_FILE below should be used.
 # Default: <empty>
-LDAP_CACERT_URL="https://bigldap/bigldap.l7tech.com.pem"
+LDAP_CACERT_URL=""
 
 # LDAP_CACERT_FILE variable specifies the file that contains certificates for all of the Certificate
 # Authorities the client will recognize.
@@ -92,16 +92,16 @@ LDAP_CACERT_FILE="/home/ssgconfig/certificate.pem"
 # Enabling this means TLS will be established with mutual authentication.
 # It can be "yes or "no".
 # Default: no
-CLT_TLS_AUTH="no"
+CLT_TLS_AUTH="yes"
 
 # The filename that contains the client certificate:
 # Default: <empty>
-LDAP_TLS_CERT="/etc/openldap/cacerts/client.pem"
+LDAP_TLS_CERT="/home/ssgconfig/client.pem"
 
 # The file that contains the private key that matches the certificate stored in
 # the TLS_CERT file. Password protected private keys are not currently supported.
 # Default: <empty>
-LDAP_TLS_KEY="/etc/openldap/cacerts/client.key"
+LDAP_TLS_KEY="/home/ssgconfig/client.key"
 
 # ADVANCED_TLS_CONF variable is used to enable some andvanced check to be done by the client on
 # server's certificate in TLS handshake. It can be "yes" or "no".
@@ -109,7 +109,7 @@ LDAP_TLS_KEY="/etc/openldap/cacerts/client.key"
 # If this is set to "yes", "LDAP_TLS_CIPHER_SUITE", "LDAP_TLS_REQCERT" and "LDAP_TLS_CRLCHECK" will
 # be required and set.
 # Default: no
-ADVANCED_TLS_CONF="no"
+ADVANCED_TLS_CONF="yes"
 
 # The acceptable cipher suite and preference order; Should be a cipher specification supported by the
 # local OpenSSL; (cipher-list values supported by the local OpenSSL: "openssl ciphers -v ALL")
@@ -152,7 +152,7 @@ LDAP_ANONYM=no
 # must be specified as a Distinguished Name in LDAP format.
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
 # Default: <empty>
-LDAP_BINDDN="cn=Manager,dc=example,dc=com"
+LDAP_BINDDN="cn=Manager,dc=l7tech,dc=com"
 
 # The password for bind (simple authentication).
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
