ug FR-433: TLS protocols/ciphers can now be configured for ESM and the PC. Weak ciphers are no longer enabled by default for the PC or ESM.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29193 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/resources/emconfig.properties
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/resources/emconfig.properties
@@ -65,6 +65,12 @@ em.server.listenaddr.description = The listener IP address
 em.server.listenaddr.default = *
 em.server.listenaddr.mutable = true
 
+em.server.listenport.protocols.decription = Enabled protocols for the HTTPS listener (comma separated list)
+em.server.listenport.protocols.default =
+
+em.server.listenport.ciphers.decription = Enabled ciphers for the HTTPS listener (comma separated list)
+em.server.listenport.ciphers.default =
+
 em.server.session.timeout.description = Session timeout (timeunit)
 em.server.session.timeout.default = 30m
 em.server.session.timeout.clusterProperty = session.timeout
