SSG-4947: dev review
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29202 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
+++ b/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
@@ -2,19 +2,30 @@
 main.button.addServer=&Add Server
 main.button.editServer=&Edit Server
 main.button.removeServer=&Remove Server
-main.label.strategy=Failover Strategy
-main.checkbox.failAssertion=Continue processing if virus found
+
+main.button.addParam=Add &Parameter
+main.button.editParam=E&dit Parameter
+main.button.removeParam=Re&move Parameter
+
+main.label.strategy=Failover Strategy:
+main.label.timeout=Connection Timeout (sec.):
+main.label.readTimeout=Read Timeout (sec.):
+
+main.checkbox.failAssertion=&Continue processing if virus found.
 
 #entries for the server properties dialog
 server.button.ok=&OK
 server.button.cancel=&Cancel
-server.label.hostname=Hostname
-server.label.serviceName=Service Name
-server.label.port=Port Number
-server.label.parameters=Service Parameters
-main.button.addParam=Add &Parameter
-main.button.editParam=Edit Parameter
-main.button.removeParam=Remove Parameter
+
+server.label.hostname=Hostname:
+server.label.serviceName=Service Name:
+server.label.port=Port Number:
+server.label.parameters=Service Parameters:
+server.label.maxdepth=Max MIME Depth:
+server.button.testConnection=&Test Connection
+
 param.label.name=Parameter Name
 param.label.value=Parameter Value
-server.label.timeout=Timeout (sec.)
+
+
+
