--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -63,7 +63,7 @@
         <dependency name="CsrfProtectionAssertion" rev="latest.integration" conf="module"/>
         <dependency name="Api3ScaleAssertion" rev="latest.integration" conf="module"/>
         <dependency name="JsonTransformationAssertion" rev="latest.integration" conf="module"/>
-
+        <dependency name="IcapAntivirusScannerAssertion" rev="latest.integration" conf="module"/>
         <!-- Optional Modular Assertions are copied to "dist" but not packaged -->
         <dependency name="CaWsdmAssertion" rev="latest.integration" conf="module-optional"/>
     </dependencies>
