Added configuration options for membership filtering in ldap_only setup.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29207 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -44,6 +44,31 @@ RADIUS_TIMEOUT="3"
 # Default: md5
 PASS_HASH_ALGO="md5"
 
+# PAM_LOGIN_ATTR variable specifies the attribute to use when constructing the attribute value
+# assertion for retrieving a directory entry for a user's login name.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "uid" (for compatibility with RFC 2307).
+PAM_LOGIN_ATTR="uid"
+
+# PAM_FILTER variable specifies a filter to use when retrieving user information from LDAP.
+# The user entry must match the attribute value assertion of (pam_login_attribute=login_name)
+# as well as any filter specified here.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "objectclass=posixaccount"
+PAM_FILTER="objectclass=posixaccount"
+
+# PAM_MEMBER_ATTR variable specifies the attribute to use when testing a user's membership of a group
+# specified in the PAM_GROUPDN option.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "memberuid"
+PAM_MEMBER_ATTR="memberuid"
+
+# PAM_GROUPDN variable should contain the distinguished name of a group to which a user must belong
+# for logon authorization to succeed.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "ssgusers"
+PAM_GROUPDN="ssgusers"
+
 # LDAP_TYPE variable is either "ldap" or "ldaps" to identify if natively supported TLS will be used
 # to communicate with the LDAP server or not. If "ldaps" is used, relevant variables below become mandatory.
 # It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
