SSG-5019: Fix for CSRHandler: NPE thrown when XVC is attempting to obtain the client cert
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29210 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -995,6 +995,8 @@ pkix.csr.defaultExpiryAge.description = The default certificate expiry to use fo
 pkix.csr.defaultExpiryAge.default = 730
 pkix.csr.defaultExpiryAge.clusterProperty = pkix.csr.defaultExpiryAge
 pkix.csr.defaultExpiryAge.validation.type = integer
+pkix.csr.defaultExpiryAge.validation.min = 1
+pkix.csr.defaultExpiryAge.validation.max = 100000
 
 keyStoreDefaultSslKey.description = Keystore ID and alias of default SSL key, colon delimited.  A keystore ID of -1 means "unspecified".
 keyStoreDefaultSslKey.default = -1:SSL
